--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,20 +1,28 @@
 <div class="wrapper">
     <header class="header">
-        <h1>Registration platform for businesses</h1>
+        <div class="logo">
+            <img src="../../assets/img/logo.png" class="logo">
+        </div>
     </header>
     <div class="main">
-        <div class="content">
-            <div class="content-left"><img src="../../assets/img/logo.png" class="logo"></div>
-            <div class="content-right">
-                <igx-card>
-                <igx-card-header>Features</igx-card-header>
-                <ul style="list-style-type:circle">
-                    <li>Handle, manage and control clients visits</li>
+        <div class="features">
+            <div class="left-features">
+                <h4>Client?</h4>
+                <ol>
+                    <li>Go to client Entrance</li>
+                    <li>Enter store ID</li>
+                    <li>Fill a short registration form</li>
+                    <li>Thats it!</li>
+                </ol>
+            </div>
+            <div class="right-features">
+                <h4>Store owner - sign in with Google and:</h4>  
+                <ul>
+                    <li>Handle, manage and control customers visits</li>
                     <li>Keep track of customers with a virtual reception</li>
-                    <li>Monitor queues</li>
+                    <li>Monitor queues to enter your store</li>
                     <li>Reach the clients via a helpful landing page.</li>
                 </ul>
-                </igx-card>
             </div>
         </div>
         <div class="aside">
