--- a/src/app/monitor-queues/monitor-queues.component.html
+++ b/src/app/monitor-queues/monitor-queues.component.html
@@ -1,14 +1,13 @@
-<p>
-  <igx-grid #monitorGrid [data]="VisitorsQueue" id="monitorGrid" [displayDensity]="'cosy'" [primaryKey]="'id'">
-    <igx-column [pinned]="true" [filterable]="false" [editable]="false" width="100px">
-      <ng-template igxCell let-cell="cell" let-val>
-        <button igxButton (click)="deleteRow(cell.cellID.rowID)" >
-          <igx-icon>delete</igx-icon>
-        </button>
-      </ng-template>
-    </igx-column>
-    <igx-column field="first_name" header="First name" [dataType]="'string'"></igx-column>
-    <igx-column field="last_name" header="Last name" [dataType]="'string'"></igx-column>
-    <igx-column field="phone" header="Phone" [dataType]="'string'" sortable="true"></igx-column>
-  </igx-grid>
-</p>
+<div class="list">
+  <igx-list #queueMonitor>
+    <igx-list-item *ngFor="let visitor of VisitorsQueue; index as i">
+      <span igxListLineTitle>{{ i+1 }}</span>
+      <span igxListLineTitle >{{ visitor.first_name}}, {{visitor.last_name}}</span>
+      <span igxListLineSubTitle>{{ visitor.phone }}</span>
+      <button igxButton="icon" igxListAction class="custom-button"  (click)="deleteRow(i)">
+        <igx-icon>delete</igx-icon>
+      </button>
+    </igx-list-item>
+  </igx-list>
+</div>
+
