ScrenShots and new font

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,4 +11,9 @@
   src: url("./assets/fonts/LibreBaskerville/LibreBaskerville-Bold.ttf");
 }
 
+@font-face {
+  font-family: "Kollektif";
+  src: url("./assets/fonts/Kollektif/Kollektif.ttf");
+}
+
 
