--- a/src/app/store-check-in/store-check-in.component.scss
+++ b/src/app/store-check-in/store-check-in.component.scss
@@ -18,6 +18,12 @@ label{
     margin-bottom: 5px;
 }
 
+.worng-store-id{
+    color: red;
+    font-weight: 600;
+
+}
+
 .form-igxButton{
     button{
         width:12rem
