--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,14 +2,19 @@
   <header class="header">
     <div class="avatar-and-logout">
       <div class="avatar">
-        <igx-avatar [src]="storeOwner.picture" roundShape="true" size="large"></igx-avatar>
+        <img src={{storeOwner.picture}} class="avatar" class="avatar-img" [igxToggleAction]="toggleRef">
       </div>
       <div class="logout">
-        <span igxButton="raised" (click)="logout()">Sign Out </span>
+        <button class="logout-button" (click)="logout()" igxToggle #toggleRef="toggle">
+          <img src="../../assets/img/Logout.png" />
+        </button>
       </div>
     </div>
     <div class="title">
-      <h1>Store DashBoard</h1>
+      <img src="../../assets/img/logo-dashboard.png" class="logo">
+      <span>DashBoard</span>
+    </div>
+    <div>
     </div>
   </header>
   <div class="main-panel">
